[package]
name = "ilix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.71"
async-trait = "0.1.68"
dotenv = "0.15.0"
env_logger = "0.10.0"
hex-literal = "0.4.1"
hex-string = "0.1.0"
lazy_static = "1.4.0"
mongodb = "2.5.0"
mongodb-gridfs = "0.2.5"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.97"
sha3 = "0.10.8"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
