[package]
name = "ilix_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4"
actix-web-lab = "0.19.1"
anyhow = "1.0.71"
async-trait = "0.1.68"
chacha20poly1305 = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
hex-literal = "0.4.1"
hex-string = "0.1.0"
log = "0.4.19"
mongodb = "2.5.0"
mongodb-gridfs = "0.2.5"
once_cell = "1.18.0"
parking_lot = "0.12.1"
rand = "0.8.5"
scopeguard = "1.1.0"
serde = "1.0.164"
serde_json = "1.0.97"
sha3 = "0.10.8"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
uuid = "1.3.4"
